# Project

./: README.md
Project/: CMakeLists.txt
Project/include/: AddWordsWindow.h  Dictionary.h  EditWordsWindow.h  MainWindow.h  TrainingWindow.h
Project/resources/: dictionary.txt
Project/src/: AddWordsWindow.cpp  Dictionary.cpp  EditWordsWindow.cpp  MainWindow.cpp  TrainingWindow.cpp
